--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,10 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.dmulloy2</groupId>
+      <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib</artifactId>
       <version>master-SNAPSHOT</version>
-      <scope>provided</scope>
+      <scope>4.7.0</scope>
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
