--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
       <artifactId>ProtocolLib</artifactId>
-      <version>master-SNAPSHOT</version>
-      <scope>4.7.0</scope>
+      <version>4.7.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
